20060616:
- added speed limiting (options -r and -R)
- fix errormessage in calcint
- show option -d in usage output only if it is available
- use of float really doesn't make any sense nowadays;
  changed all floats to double

20060421:
- set exitcode to failure whenever an error occures
- fixed a warning

20060324:
- added option -c to enable synchronous data integrity I/O:
  This was enabled by default until now, but may cause a decrease in
  performance as it requires a higher number of I/O ops. On systems
  without full synchronous data integrity support, no difference will
  be observable concerning performance. Systems that support it, will
  gain increased performace without -c, but error reporting will be 
  more precise with -c.
- changed errormessages to include offset
- added support for Solaris' directio hinting
- made memlock support an automagic option (compiled in if available)
- simplify CFLAGS overriding
- more portable largefile support solution
- minimized configure script
- default to native compiler instead of gcc

20060217:
- made signal handling more standards conforming
- use deferred cancellation instead of asynchronous
- fixed some debug messages
- use sendfile only for sockets

20060126:
- clarified some errormessages
- fixed some typos
- updated README file

20051006:
- added support for sendfile
  (AFAIK only the Solaris version supports sending from buffers)
- added memory locking support
- added support to set buffer size as percentage of physical memory
- open file with O_LARGEFILE per default
- added some command-line options for existing functionality
  (-H, -V)
- compile as 64bit executable on opteron and sparc architectures by
  default
- defaulting to /var/tmp for buffer files, as /tmp is a swap based 
  filesystem on some operating systems
- use TMPDIR environment variable if available to determine where
  to put a buffer file

20051003:
- increased maximum value of number of blocks
- doku updates
- openssl build fixes